# butcuacotam2

./: .editorconfig  .gitignore  404.html  ATTRIBUTION.md  README.md  index.html  package.json  podman-compose.yml  vite.config.ts
.github/workflows/: build-backend.yml  build.yml
assets/fonts/: fonts.css
assets/images/: FTU_logo.avif  NTQ-logo.avif  auth-ticket.avif  fyu.avif  landing-graphics.avif  logo-transparent-light.avif  noise.avif  ticket-passenger.avif
backend/: .gitignore  Cargo.toml  Containerfile  README.md  auth.py  config.py  db.py  main.py  manage.sh  models.py  pyproject.toml  run_sqlite_web.sh
backend/db_data/: database.sqlite
backend/src/: auth.rs  db.rs  main.rs  model.rs
backend/src/handlers/: auth.rs  challenge.rs  mod.rs  user.rs
src/: App.tsx  gameScript.tsx  index.css  index.tsx  registry.ts  types.ts
src/challenges/: Challenge1.css  Challenge1.tsx  Challenge2.tsx
src/challenges/challenge2/: maze_gen.ts
src/components/: DevTools.tsx  FullScreenNarrator.tsx  VisualNovelTextWindow.tsx
src/components/styles/: VisualNovelTextWindow.css
src/components/winlib/: AnimatedShow.tsx  DraggableWindow.tsx  StandardWindow.tsx
src/engine/: crypto.ts  events.ts  script.tsx  userdata.ts  userdata.tsx
src/storyline/: AuthenticationGuard.tsx  Credits.tsx  Game.tsx  LoadingScreen.tsx  MainMenu.tsx  Section1.tsx  Section2.tsx  ToBeContinued.tsx
src/storyline/styles/: AuthenticationGuard.css  Credits.css  Game.css  MainMenu.css  Section1.css  Section2.css
src/storyline/tickets/: AuthTicket.css  AuthTicket.tsx
(+21 files in other folders)
