[package]
name = "butbase"
version = "0.1.0"
edition = "2024"
author = "Tri Phuong Nguyen <phuongnt.cte.g5@gmail.com>"

[dependencies]
actix-multipart = "0.7.2"
actix-session = "0.11.0"
actix-web = "4"
chrono = "0.4.44"
derive_more = "2.1.1"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mongodb = "3.6.0"
bson = "2.13.0"
tokio = { version = "1", features = ["full"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4"] }
futures-util = "0.3.31"
env_logger = "0.11.5"
log = "0.4.22"
actix-cors = "0.7.1"

[profile.dev]
opt-level = 0
debug = 0
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
